--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -50,7 +50,7 @@
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
-                                    <a href="{% url 'business:create_specific_portal' %}">Edit Site Goals</a>
+                                    <a href="{% url 'business:create_specific_portal' %}">Saved Portals</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
