--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -203,6 +203,9 @@
                     <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
                 </li>
                 <li class="nav-item">
+                    <a href="{% url 'onlinetools:onlinetoolshome' %}" class="nav-link"> See Online Tools That Help Grow Your Business</a>
+                </li>
+                <li class="nav-item">
                     <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link"> Insurance Products </a>
                 </li>
 
