--- a/onlinetools/templates/onlinetoolsseven.html
+++ b/onlinetools/templates/onlinetoolsseven.html
@@ -10,12 +10,12 @@
 <section class="main-content">
   <div class="row">
     <div class="col-md-12">
-  <iframe width="100%" height="515" src="https://www.youtube.com/embed/CPsagcbNH_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+<iframe width="100%" height="515" src="https://www.youtube.com/embed/3Km6tS0063w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
   </div>
   <div class="jumbonew">
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
-  <h2>Choose The Dunn & Bradstreet Products Below To Grow Your Business. <br><h4><b>Watch The Video Above For Video Explanation Of The Producs.</b></h4></h2>
+  <h2><b>Monday.com Is A Perfect CRM That Can Help You Streamline Your Business Processes. Watch The Video Above To Learn More.</b></h2>
   </div>
   </div>
   </div>
@@ -31,15 +31,14 @@
     <div class="row">
         <div class="col-md-4 col-sm-6">
             <div class="card mb-4 shadow-sm">
-                <img src="https://app.impact.com/display-ad/2075-521507"
+                <img src="https://dapulse-res.cloudinary.com/image/upload/f_auto,q_auto/remote_mondaycom_static/img/monday-logo-x2.png"
                      height="270px" width="100%" alt="">
                 <div class="card-body">
-                    <h4 class="card-text"><b>Credit Evaluator</b></h4>
-                    <h5 class="card-text">A basic business credit report can help you:</h5>
-                    <h5 class="card-text">Easily identify how much credit you should extend to another company <br><br>Assess risk factors related to a company’s legal filings <br><br>Make confident decisions based on a company’s payment performance trend</h5>
+                    <h4 class="card-text"><b>Monday.com</b></h4>
+                    <h5 class="card-text">Plan, run, and track remote work in one flexible platform</h5>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a href="https://dandb.com/credit-evaluator-plus/?irclickid=xiG3blUvlxyOWv2wUx0Mo38QUkizuhyZRU0z2Y0" target="_blank" class="btn btn-primary">
+                            <a href="https://mondaycom.grsm.io/zephaniahlangley7730" target="_blank" class="btn btn-primary">
                                 Sign Up For The Service
                             </a>
                         </div>
@@ -47,43 +46,6 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-6">
-            <div class="card mb-4 shadow-sm">
-                <img src="https://app.impact.com/display-ad/2075-87233"
-                     height="270px" width="100%" alt="">
-                <div class="card-body">
-                    <h4 class="card-text"><b>Credit Builder Plus</b></h4>
-                    <h5 class="card-text">With CreditBuilder™ Plus You Get:</h5>
-                    <h5 class="card-text">A Dun & Bradstreet D-U-N-S® Number & business credit file in 5 business days or less* <br><br>Unlimited access to your D&B® credit scores and ratingsThe ability to add positive payment experiences to your file** <br><br>The opportunity to benchmark your company against your industry and 8 key peers <br><br>Alerts when others request your business credit report†</h5>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="https://products.dandb.com/aff/creditbuilder_a/?irclickid=xiG3blUvlxyOWv2wUx0Mo38QUkizuWSxRU0z2Y0" target="_blank" class="btn btn-primary">
-                                Sign Up For The Service
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-            <div class="card mb-4 shadow-sm">
-                <img src="https://app.impact.com/display-ad/2075-521521"
-                     height="270px" width="100%" alt="">
-                <div class="card-body">
-                    <h4 class="card-text"><b>Small Business Starter</b> </h4>
-                    <h5 class="card-text">Join over 20 million businesses in the most trusted online business directory, D&B Credibility Review.</h5>
-                    <h5 class="card-text">Join the Credibility Review and align your company with the Dun & Bradstreet brand. Our leading credit monitoring products are used by hundreds of thousands of companies interested in helping protect their business reputation.</h5>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="https://www.dandb.com/businessdirectory/products/?irclickid=xiG3blUvlxyOWv2wUx0Mo38QUkizuWW5RU0z2Y0" target="_blank" class="btn btn-primary">
-                                Sign Up For The Service
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ANCHOR_FOR_NEW_CARDS -->
         <!-- Dont remove this comment -->
 
     </div>
