--- a/onlinetools/templates/onlinetoolssix.html
+++ b/onlinetools/templates/onlinetoolssix.html
@@ -31,51 +31,14 @@
     <div class="row">
         <div class="col-md-4 col-sm-6">
             <div class="card mb-4 shadow-sm">
-                <img src="https://app.impact.com/display-ad/2075-521507"
+                <img src="https://assets.gusto.com/assets/svg/header/gusto-logo-bfed4fde4bd2b5dd364ab0e58f77fc90aeefa2f1ecdb7fff524279642e23f9c2.svg"
                      height="270px" width="100%" alt="">
                 <div class="card-body">
-                    <h4 class="card-text"><b>Credit Evaluator</b></h4>
-                    <h5 class="card-text">A basic business credit report can help you:</h5>
-                    <h5 class="card-text">Easily identify how much credit you should extend to another company <br><br>Assess risk factors related to a company’s legal filings <br><br>Make confident decisions based on a company’s payment performance trend</h5>
+                    <h4 class="card-text"><b>Gusto</b></h4>
+                    <h5 class="card-text">Gusto makes it easy to onboard, pay, insure, and support your hardworking team.</h5>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a href="https://dandb.com/credit-evaluator-plus/?irclickid=xiG3blUvlxyOWv2wUx0Mo38QUkizuhyZRU0z2Y0" target="_blank" class="btn btn-primary">
-                                Sign Up For The Service
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-            <div class="card mb-4 shadow-sm">
-                <img src="https://app.impact.com/display-ad/2075-87233"
-                     height="270px" width="100%" alt="">
-                <div class="card-body">
-                    <h4 class="card-text"><b>Credit Builder Plus</b></h4>
-                    <h5 class="card-text">With CreditBuilder™ Plus You Get:</h5>
-                    <h5 class="card-text">A Dun & Bradstreet D-U-N-S® Number & business credit file in 5 business days or less* <br><br>Unlimited access to your D&B® credit scores and ratingsThe ability to add positive payment experiences to your file** <br><br>The opportunity to benchmark your company against your industry and 8 key peers <br><br>Alerts when others request your business credit report†</h5>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="https://products.dandb.com/aff/creditbuilder_a/?irclickid=xiG3blUvlxyOWv2wUx0Mo38QUkizuWSxRU0z2Y0" target="_blank" class="btn btn-primary">
-                                Sign Up For The Service
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-            <div class="card mb-4 shadow-sm">
-                <img src="https://app.impact.com/display-ad/2075-521521"
-                     height="270px" width="100%" alt="">
-                <div class="card-body">
-                    <h4 class="card-text"><b>Small Business Starter</b> </h4>
-                    <h5 class="card-text">Join over 20 million businesses in the most trusted online business directory, D&B Credibility Review.</h5>
-                    <h5 class="card-text">Join the Credibility Review and align your company with the Dun & Bradstreet brand. Our leading credit monitoring products are used by hundreds of thousands of companies interested in helping protect their business reputation.</h5>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="https://www.dandb.com/businessdirectory/products/?irclickid=xiG3blUvlxyOWv2wUx0Mo38QUkizuWW5RU0z2Y0" target="_blank" class="btn btn-primary">
+                            <a href="https://gusto.com/?referral_token=zephaniah9&utm_source=inapp" target="_blank" class="btn btn-primary">
                                 Sign Up For The Service
                             </a>
                         </div>
