--- a/business/templates/creditrepair/creditrepairplan12.html
+++ b/business/templates/creditrepair/creditrepairplan12.html
@@ -53,8 +53,7 @@
                                     payments because they are reporting that also.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://www.myjewelersclub.com/" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -73,8 +72,7 @@
                                     tradeline.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://newcoastdirect.com" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -93,8 +91,7 @@
                                     and build your credit back up.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://www.creditbuildercard.com/" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -118,8 +115,7 @@
                                     credit.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td>
                                     <a href="https://www.self.inc/signup?net=10828836&step=form&affil_id=10828836&utm_source=refer-a-friend&utm_medium=referral&utm_campaign=2b26f4c2-53a7-4e1f-9663-b5e6dcc234bc"
@@ -141,8 +137,7 @@
                                     good track record with your landlord first.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td>
                                     <a href="https://www.rentreporters.com/how-we-help/how-to-report-rent-to-credit-bureaus/"
@@ -163,8 +158,7 @@
                                     They can backdate your rental history for 24 months.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://rentalkharma.com/" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -182,8 +176,7 @@
                                     due at time of purchase.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://huttonchase.com/" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -201,8 +194,7 @@
                                     each month). This is free! You can only “self report” to Experian though.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://www.experian.com/consumer-products/credit-score.html"
                                        target="_blank">
@@ -222,8 +214,7 @@
                                     it’s about $30 to get started, then finance the rest in monthly payments.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. We will have to add age though through an
-                                    Authorized User Account which we can help you add.
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://www.oxpublishing.com/credit/p7/?aff=XX-7D2ZYX" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -258,21 +249,21 @@
                             <tbody>
                             <tr>
                                 <td>Collections On Your Credit Report</td>
-                                <td><a href="{% url 'business:credit-repair' %}" class="btn btn-primary">Click Here To
+                                <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
                                     Have Us Fix Your Credit</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>Too Many Inquiries On Your Credit Report</td>
-                                <td><a href="{% url 'business:credit-repair' %}" class="btn btn-primary">Click Here To
+                                <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
                                     Have Us Fix Your Credit</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>High Credit Card Utilization</td>
-                                <td><a href="{% url 'business:credit-repair' %}" class="btn btn-primary">Click Here To
+                                <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
                                     Have Us Fix Your Credit</a></td>
                             </tr>
                             </tbody>
