--- a/whitelabelpartnerportal/templates/viewportals.html
+++ b/whitelabelpartnerportal/templates/viewportals.html
@@ -30,18 +30,18 @@
                         allowfullscreen></iframe>
             </div>
         </div>
+        <br><br>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-header card-default">
-                        View Your White Label Portals
+                        View Your White Label Portal
                     </div>
                     <div class="card-body">
                         <table id="datatable" class="table table-striped dt-responsive nowrap">
                             <thead>
                             <tr>
-                                <th>View Your Free White Label Portal Website</th>
-                                <th>View Your Paid White Label Website</th>
+                                <th>View Your White Label Portal Website</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -50,13 +50,7 @@
                                 <td>
                                     <a target="_blank" class="btn btn-primary"
                                        href="https://getdinerotodayfreeportal.herokuapp.com/">Click Here To View Your
-                                        Free Portals</a>
-                                </td>
-
-                                <td>
-                                    <a target="_blank" class="btn btn-primary"
-                                       href="https://getdinerotodaypaidportal.herokuapp.com/">Click Here To View Your
-                                        Paid Portals</a>
+                                        White Label Portal</a>
                                 </td>
 
                             </tr>
