--- a/affiliate/templates/affiliate-sharelinks.html
+++ b/affiliate/templates/affiliate-sharelinks.html
@@ -20,7 +20,7 @@
 
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Network Marketing</h2></div>
+            <h2>Your Marketing Links</h2></div>
     </div>
 
     <section class="main-content">
@@ -31,39 +31,31 @@
                         allowfullscreen></iframe>
             </div>
         </div>
-        <br>
-        <h2 style="text-align:center;">Training Videos</h2>
-        <br>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/sdUKkjxq_QU" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <div class="card-body">
-                        <p class="card-text">Watch Video Above On Leveraging Your Network</p>
-                    </div>
-                </div>
+        <div class="card">
+            <div class="card-header card-default">
+                Your Marketing Links
             </div>
-            <div class="col-md-6">
-                <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/miU1CDu5nkk" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <div class="card-body">
-                        <p class="card-text">How To Present</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="https://docs.google.com/presentation/d/e/2PACX-1vT1NNKantmKStgWg4HYsDFlQ15a5eGpCWRwAxDkDqqwLDK8FP4U6B0YTE5FX4Jbtx3-uKd_zIvPQdx8/pub?start=false&loop=false&delayms=3000"
-                                   target="_blank">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View White Label
-                                        Presentation
-                                    </button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="card-body">
+            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                <thead>
+                <tr>
+                    <th>Company</th>
+                    <th>Link</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Facebook</td>
+                        <td><a target="_blank" class="btn btn-primary"
+                           href="https://facebook.com">Your Affiliate Link For Facebook</a></td>
+                    </tr>
+                    <tr>
+                        <td>Twitter</td>
+                        <td><a target="_blank" class="btn btn-primary"
+                           href="https://facebook.com">Your Affiliate Link For Twitter</a></td>
+                    </tr>
+                </tbody>
+            </table>
             </div>
         </div>
     </section>
