--- a/affiliate/templates/affiliate-addbankinfo_form.html
+++ b/affiliate/templates/affiliate-addbankinfo_form.html
@@ -1,84 +1,32 @@
 {% extends "pages/base-affiliate.html" %}
 {% load static %}
-
-{% block extrastyle %}
-    <script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous"
-            data-cfasync="false">
-    </script>
-    <script>
-        var chatPal = new ChatPal({
-            embedId: 'DfT7BnTm5dGn',
-            remoteBaseUrl: 'https://chatterpal.me/',
-            version: '7.23'
-        });
-    </script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
 {% block content %}
 
-
+    <div class="row page-header">
+        <div class="col-lg-6 align-self-center "></div>
+    </div>
 
     <section class="main-content">
 
-     {% if form %}
-            <div class="row">
-                <div style="margin: 0 auto">
-                    <h1>Edit Bank Account Information</h1>
+        <div class="card">
+            <div class="card-header">
+                Edit Bank Account Information
+            </div>
+
+            <div class="card-body">
+                <div class="col-md-12">
+                    <form method="post">{% csrf_token %}
+                        {{ form.as_p }}
+
+                        <div class="btn-toolbar">
+                            <input type="submit" value="Submit" class="btn btn-primary mr-1"/>
+                            <a class="btn btn-primary" href="javascript:history.go(-1)">Back</a>
+                        </div>
+                    </form>
+
                 </div>
 
             </div>
-
-            <div class="row">
-            <div style="margin: 0 auto 100px auto; width: 400px">
-            <form method="post">{% csrf_token %}
-                {{ form.as_p }}
-
-                <div style="display: flex; justify-content: space-around">
-                    <input type="submit" value="Submit" class="btn btn-primary"/>
-                    <a class="btn btn-primary" href="javascript:history.go(-1)">Back</a>
-                </div>
-            </form>
-
-        {% else %}
-
-        <div class="row">
-            <div style="margin: 0 auto">
-                <h1>Enter In New Payment Information</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div style="margin: 0 auto 100px auto; width: 400px">
-                <form action="/affiliate/addbankinfo_form" accept-charset="UTF-8"
-                      method="post">{% csrf_token %}
-                    <br>
-                    <h4>Routing Number</h4>
-                    <input type="text" name="routing_number" id="routing_number"/>
-                    <br>
-                    <h4>Name Of Bank</h4>
-                    <input type="text" name="name_of_bank" id="name_of_bank"/>
-                    <br>
-                    <h4>Account Number</h4>
-                    <input type="text" name="account_number" id="account_number"/>
-                    <br>
-                    <h4>Name On Bank Account</h4>
-                    <input type="text" name="name_on_bank_account" id="name_on_bank_account"/>
-                    <br>
-                    <h4>Your Address</h4>
-                    <input type="text" name="your_address" id="your_address"/>
-                    <br>
-                    <div style="display: flex; justify-content: space-around">
-                        <button type="submit" name="commit" class="btn btn-primary">Submit</button>
-                        <a class="btn btn-primary" href="javascript:history.go(-1)">Back</a>
-                    </div>
-                </form>
-
-                        {% endif %}
-
-            </div>
-
-        </div>
 
     </section>
 {% endblock %}
